isolate OpenGL initialization